fixed logo spacing

--- a/src/style.css
+++ b/src/style.css
@@ -14,24 +14,25 @@
   }
   
   /* Header styles */
-  header {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    background-color: var(--green);
-    color: #fff;
-    text-align: center;
-    padding: 1rem;
-    z-index: 1000;
-  }
+/* Header styles */
+header {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  background-color: var(--green);
+  color: #fff;
+  text-align: center;
+  padding: 1rem 1rem 0 1rem; /* Add padding to top */
+  z-index: 1000;
+}
   
   header h1 {
     margin: 0;
   }
 
   .logo {
-    max-width: 50%;
+    max-width: 33%;
   }
   
   
